# ten5whisper

./: .gitignore  Makefile  docker-compose-dev.yml
backend/: Dockerfile  pyproject.toml
backend/app/: audio.opus  l38kg-w9041.opus  main.py
backend/app/api/: api.py  celery_task.py  celery_task_bk.py
backend/app/api/endpoints/: translate.py
backend/app/core/: config.py  deps.py  worker.py
backend/app/schemas/: response_schema.py
backend/app/utils/: fastapi_globals.py  storage_redis.py  utils.py
traefik/: traefik.yml
traefik/certs/: ssl.key  ssl.pem
